@@ -3125,6 +3125,24 @@ Th+-------------------------------------------------------------------------+
 			interrupted.
 		      </entry>
 		    </row>
+
+		    <row>
+		      <entry><computeroutput>W</computeroutput></entry>
+		      <entry>-</entry>
+		      <entry>
+			triggers-awaited: the package awaits trigger
+			processing by another package.
+		       </entry>
+		    </row>
+
+		    <row>
+		      <entry><computeroutput>T</computeroutput></entry>
+		      <entry>-</entry>
+		      <entry>
+			triggers-pending: The package has had an update
+			triggered due to changes in another package.
+		      </entry>
+		    </row>
 		  </tbody>
 		</tgroup>
 	      </informaltable>
