@@ -100,7 +100,10 @@ versions of the package.
    u - "unpacked"
    C - half-configured
    H - half-installed
+   W - waiting for updates triggered in other packages
+   T - pending updates triggered by other packages
    c - removed, but config-files still present (ie, not purged)
+   p - purged, removed with config-files not present
    i - installed
    E - internal error (should not happen)
 
