@@ -76,6 +76,9 @@ UNRELEASED (designated 0.7)
 
 - Documentation:
 
+  * Previously missing trigger-related package states are now
+    documented. (Closes: #770073, #771305, #771704)
+
 - Translation updates:
 
   * Czech by Miroslav Kure (Closes: #758226)
